Resolve overlap

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ label {
 #collegeName {
   font-family: "Bree Serif", serif;
   font-size: 2.7rem;
+  margin-top: 5vh;
 }
 
 #name {
